SONARPHP-1493 Adapt syntax to Java 17