@@ -391,7 +391,7 @@ public final class CheckUtils {
     return call.callArguments().stream()
       .map(CallArgumentTree::value)
       .filter(arg -> arg.is(kind))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public static boolean hasNamedArgument(FunctionCallTree call) {
